Added Invoice number

--- a/invoice-template.html
+++ b/invoice-template.html
@@ -121,8 +121,9 @@
                 </svg>
               </td>
               <td>
+                Invoice: #{{invoiceNumber}}<br>
                 Created: {{todayDate}}<br>
-                Due: February 1, 2020
+                Due: Net 5
               </td>
             </tr>
           </table>
